# cars196-classifier

./: README.md  pyproject.toml  requirements.txt
configs/: eval.yaml  train.yaml
configs/data/: stanford_cars.yaml
configs/hparams_search/: mnist_optuna.yaml  optuna.yaml
configs/hydra/: default.yaml
configs/logger/: csv.yaml  tensorboard.yaml
configs/model/: alexnet.yaml  coatnet.yaml  densenet161.yaml  efficientnetv2.yaml  inception.yaml  mobilevit.yaml  resnet34.yaml  resnet50.yaml  squeezenet.yaml  swintransformer.yaml  vgg16.yaml  vit.yaml
configs/trainer/: default.yaml
notebooks/: 01-mm-dataloading.ipynb  03-mm-inference.ipynb  04-mm-augmentations.ipynb
scripts/: batch_job.sh  coatnet.sh  densenet161.sh  efficientnetv2.sh  final_efficientnetv2.sh  final_resnet50.sh  mobilevit.sh  resnet50.sh  semifinal_efficientnetv2.sh  semifinal_resnet50.sh  swintransformer.sh  train.sh
src/data/: stanford_cars_datamodule.py
src/data/components/: stanford_cars_dataset.py  transforms.py
src/gui/: gui.py
src/models/: lit_module.py
src/models/components/: alexnet.py  coatnet.py  densenet161.py  efficientnetv2.py  inception.py  mlp.py  mobilevit.py  resnet34.py  resnet50.py  squeezenet.py  swintransformer.py  vgg16.py
tests/: test_datamodules.py  test_eval.py  test_models.py  test_train.py
