[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.poetry]
name = "cars196-classifier"
version = "0.1.0"
description = ""
authors = ["Marco Moldovan <marco.moldovan.1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0, !=2.0.1"
torchvision = "^0.15"
lightning = "^2.0.6"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
wandb = "^0.15.7"
pyrootutils = "^1.0.4"
pre-commit = "^3.3.3"
rich = "^13.4.2"
pytest = "^7.4.0"
sh = "^2.0.4"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
einops = "^0.6.1"
timm = "^0.9.5"
efficientnet-pytorch = "^0.7.1"
tensorboard = "^2.14.0"
gradio = "^3.40.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
